# final-nn

./: Pipfile  README.md  autoencoder.ipynb  classifier.ipynb  pyproject.toml
.github/workflows/: test.yml
nn/: nn.py  preprocess.py
test/: test_nn.py
