[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]

[project]
name = "nn"
authors = [{name = "Isobel Beasley", email = "isobel.beasley@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">= 3.9"
dependencies = [
    "pytest", 
    "numpy" 
]

[project.urls]
Home = "https://github.com/IJbeasley/final-nn"